--- a/_posts/0000-01-02-drakkar67.md
+++ b/_posts/0000-01-02-drakkar67.md
@@ -3,4 +3,5 @@ layout: slide
 title: "Welcome to our second slide!"
 ---
 Your text... something has been changed now... changed again
+... and new changes
 Use the left arrow to go back!
