--- a/_posts/0000-01-02-drakkar67.md
+++ b/_posts/0000-01-02-drakkar67.md
@@ -4,4 +4,5 @@ title: "Welcome to our second slide!"
 ---
 Your text... something has been changed now... changed again
 ... and new changes
+... and fourth change
 Use the left arrow to go back!
